refactor(games): little refactor on ws game bean
